# llamaloop

./: AGENTS.md  Cargo.toml  DASHBOARD_IMPROVEMENTS.md  ENHANCEMENTS.md  MODELS.md  Makefile  README.md  TOOL_MODELS_FIX.md  run.sh
modelfiles/: README.md  qwen-coder-advanced.Modelfile  qwen-coder-function-v2.Modelfile  qwen-coder-function.Modelfile  qwen-coder-maxcontext.Modelfile  qwen-coder-tools-v2.Modelfile  qwen-coder-tools.Modelfile  qwen-coder-ultra.Modelfile
scripts/: build_custom_models.sh  check_context_limits.sh  configure_ollama_memory.sh  migrate_to_ollama.sh  recover_model.sh  setup_ollama_network.sh  test_models.sh  test_ollama_tools.sh  test_tool_models.sh
src/: api.rs  app.rs  chat.rs  main.rs  theme.rs  ui.rs
