[package]
name = "ollamamon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ollamamon"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
tui-textarea = "0.6"
chrono = "0.4"
bytes = "1.7"
humansize = "2.1"
